syntax = "proto3";

package WeatherSystem.EventsGenerator.Proto;
option csharp_namespace = "WeatherSystem.EventsGenerator.Proto";

//import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service EventGenerator{
  rpc EventStream(stream GetSensorEventsRequest) returns (stream GetSensorEventsResponse);
}

message GetSensorEventsResponse
{
  SensorState state = 1;
  int64 sensorId = 2;
  google.protobuf.Timestamp createdAt = 3;    
}

message GetSensorEventsRequest
{
  repeated int64 sensorId = 1;
}

message SensorState
{
  int32 temperature = 2;
  int32 humidity = 3;
  int32 co2 = 4;
}

message Sensor
{
  int64 id = 1;
  string name = 2;
  SensorType type = 3;  
}

enum SensorType {
  INSIDE = 0;
  OUTSIDE = 1;
}